import { sql } from 'drizzle-orm';
import type { InferModel } from 'drizzle-orm';
import { relations } from 'drizzle-orm/_relations';
import {
  index,
  jsonb,
  pgTable,
  text,
  uuid,
  varchar,
} from 'drizzle-orm/pg-core';

import { autoId, serviceRolePolicies, timestamps } from '../../helpers';
import { processInstances } from './processInstances.sql';
import { profiles } from './profiles.sql';

export const decisionProcesses = pgTable(
  'decision_processes',
  {
    id: autoId().primaryKey(),
    name: varchar({ length: 256 }).notNull(),
    description: text(),

    // Complete process definition — shape defined by DecisionSchemaDefinition
    // { id, version, name, description?, config?, proposalTemplate?, phases[] }
    processSchema: jsonb('process_schema').notNull(),

    createdByProfileId: uuid('created_by_profile_id')
      .notNull()
      .references(() => profiles.id, {
        onUpdate: 'cascade',
        onDelete: 'cascade',
      }),

    ...timestamps,
  },
  (table) => [
    ...serviceRolePolicies,
    index().on(table.id).concurrently(),
    index().on(table.createdByProfileId).concurrently(),
    index('decision_processes_name_gin_index')
      .using('gin', sql`to_tsvector('english', ${table.name})`)
      .concurrently(),
  ],
);

export const decisionProcessesRelations = relations(
  decisionProcesses,
  ({ one, many }) => ({
    createdBy: one(profiles, {
      fields: [decisionProcesses.createdByProfileId],
      references: [profiles.id],
    }),
    instances: many(processInstances),
  }),
);

export type DecisionProcess = InferModel<typeof decisionProcesses>;
