import { sql } from 'drizzle-orm';
import type { InferModel, SQL } from 'drizzle-orm';
import { relations } from 'drizzle-orm/_relations';
import {
  index,
  jsonb,
  pgEnum,
  pgTable,
  text,
  uuid,
  varchar,
} from 'drizzle-orm/pg-core';

import {
  autoId,
  enumToPgEnum,
  serviceRolePolicies,
  timestamps,
  tsvector,
} from '../../helpers';
import { decisionProcesses } from './decisionProcesses.sql';
import { profiles } from './profiles.sql';
import { proposals } from './proposals.sql';
import { stateTransitionHistory } from './stateTransitionHistory.sql';

export enum ProcessStatus {
  DRAFT = 'draft',
  PUBLISHED = 'published',
  COMPLETED = 'completed',
  CANCELLED = 'cancelled',
}

export const processStatusEnum = pgEnum(
  'decision_process_status',
  enumToPgEnum(ProcessStatus),
);

export const processInstances = pgTable(
  'decision_process_instances',
  {
    id: autoId().primaryKey(),
    processId: uuid('process_id')
      .notNull()
      .references(() => decisionProcesses.id, {
        onUpdate: 'cascade',
        onDelete: 'cascade',
      }),

    name: varchar({ length: 256 }).notNull(),
    description: text(),

    // Instance configuration with filled values (live/published version)
    instanceData: jsonb('instance_data').notNull(),

    // Editable draft version — the process builder always writes here.
    // On publish or "Update Process", draftInstanceData is promoted to the
    // live columns (instanceData, name, description, stewardProfileId).
    draftInstanceData: jsonb('draft_instance_data'),

    // Current state tracking
    currentStateId: varchar({ length: 256 }),

    ownerProfileId: uuid('owner_profile_id')
      .notNull()
      .references(() => profiles.id, {
        onUpdate: 'cascade',
        onDelete: 'cascade',
      }),

    // The steward profile responsible for running this process
    stewardProfileId: uuid('steward_profile_id').references(() => profiles.id, {
      onUpdate: 'cascade',
      onDelete: 'set null',
    }),

    // The process instance's own profile (for social features)
    profileId: uuid('profile_id').references(() => profiles.id, {
      onUpdate: 'cascade',
      onDelete: 'cascade',
    }),
    // .notNull(), // TODO: This needs to temporarily be nullable so that we can create a migration on current decision processes

    status: processStatusEnum('status').default(ProcessStatus.DRAFT),
    search: tsvector('search').generatedAlwaysAs(
      (): SQL =>
        sql`setweight(to_tsvector('simple', ${processInstances.name}), 'A') || ' ' || setweight(to_tsvector('english', COALESCE(${processInstances.description}, '')), 'B')::tsvector`,
    ),

    ...timestamps,
  },
  (table) => [
    ...serviceRolePolicies,
    index().on(table.id).concurrently(),
    index().on(table.processId).concurrently(),
    index().on(table.ownerProfileId).concurrently(),
    index().on(table.stewardProfileId).concurrently(),
    index().on(table.profileId).concurrently(),
    index().on(table.currentStateId).concurrently(),
    index('process_instances_search_index').using('gin', table.search),
  ],
);

export const processInstancesRelations = relations(
  processInstances,
  ({ one, many }) => ({
    process: one(decisionProcesses, {
      fields: [processInstances.processId],
      references: [decisionProcesses.id],
    }),
    owner: one(profiles, {
      fields: [processInstances.ownerProfileId],
      references: [profiles.id],
      relationName: 'processInstanceOwner',
    }),
    steward: one(profiles, {
      fields: [processInstances.stewardProfileId],
      references: [profiles.id],
      relationName: 'processInstanceSteward',
    }),
    profile: one(profiles, {
      fields: [processInstances.profileId],
      references: [profiles.id],
      relationName: 'profile',
    }),
    proposals: many(proposals),
    stateTransitions: many(stateTransitionHistory),
  }),
);

export type ProcessInstance = InferModel<typeof processInstances>;
