import type { InferModel } from 'drizzle-orm';
import { relations } from 'drizzle-orm/_relations';
import {
  foreignKey,
  index,
  pgTable,
  timestamp,
  unique,
  uuid,
} from 'drizzle-orm/pg-core';

import { autoId, serviceRolePolicies, tstzrange } from '../../helpers';
import { locations } from './locations.sql';
import { processInstances } from './processInstances.sql';
import { profiles } from './profiles.sql';
import { proposalColumns, proposals } from './proposals.sql';

export const proposalHistory = pgTable(
  'decision_proposal_history',
  {
    // Full row snapshot - includes ALL columns from proposals table (except id)
    id: uuid('id').notNull(), // Original proposal ID (from OLD.id)

    ...proposalColumns,

    historyId: autoId().primaryKey(), // Unique ID for this history record
    validDuring: tstzrange('valid_during').notNull(),
    historyCreatedAt: timestamp('history_created_at', {
      withTimezone: true,
      mode: 'string',
    })
      .notNull()
      .defaultNow(),
  },
  (table) => [
    ...serviceRolePolicies,

    // Composite unique for FK target from decisionTransitionProposals
    unique('prop_hist_process_id_history_id_uniq').on(
      table.processInstanceId,
      table.id,
      table.historyId,
    ),

    // Indexes
    index().on(table.historyId).concurrently(),
    index().on(table.id).concurrently(), // Original proposal ID
    index().on(table.processInstanceId).concurrently(),
    index('proposal_history_temporal_idx')
      .on(table.id, table.validDuring)
      .concurrently(),
    index('proposal_history_valid_during_gist')
      .using('gist', table.validDuring)
      .concurrently(),
    index('proposal_history_edited_by_idx')
      .on(table.lastEditedByProfileId)
      .concurrently(),

    // Foreign keys with explicitly shortened names to avoid PostgreSQL truncation errors generated by drizzle
    foreignKey({
      name: 'prop_hist_process_instance_fkey',
      columns: [table.processInstanceId],
      foreignColumns: [processInstances.id],
    })
      .onUpdate('cascade')
      .onDelete('cascade'),
    foreignKey({
      name: 'prop_hist_submitted_by_fkey',
      columns: [table.submittedByProfileId],
      foreignColumns: [profiles.id],
    })
      .onUpdate('cascade')
      .onDelete('cascade'),
    foreignKey({
      name: 'prop_hist_profile_fkey',
      columns: [table.profileId],
      foreignColumns: [profiles.id],
    })
      .onUpdate('cascade')
      .onDelete('cascade'),
    foreignKey({
      name: 'prop_hist_last_edited_by_fkey',
      columns: [table.lastEditedByProfileId],
      foreignColumns: [profiles.id],
    })
      .onUpdate('cascade')
      .onDelete('cascade'),
  ],
);

export const proposalHistoryRelations = relations(
  proposalHistory,
  ({ one }) => ({
    proposal: one(proposals, {
      fields: [proposalHistory.id], // Links to original proposal
      references: [proposals.id],
    }),
    processInstance: one(processInstances, {
      fields: [proposalHistory.processInstanceId],
      references: [processInstances.id],
    }),
    submittedBy: one(profiles, {
      fields: [proposalHistory.submittedByProfileId],
      references: [profiles.id],
    }),
    profile: one(profiles, {
      fields: [proposalHistory.profileId],
      references: [profiles.id],
    }),
    lastEditedBy: one(profiles, {
      fields: [proposalHistory.lastEditedByProfileId],
      references: [profiles.id],
    }),
    location: one(locations, {
      fields: [proposalHistory.locationId],
      references: [locations.id],
    }),
  }),
);

export type ProposalHistory = InferModel<typeof proposalHistory>;
